# QSMxT

./: .cirun.yaml  .cirun.yml  .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README  README.md  aseg_labels.csv  bidsmap.yaml  build.rs  dataset_description.json  default_pipelines.json  dicom_convert.py  heuristic.py  install.ps1  install.sh  joinnodeexample.py  my_pipeline.json  nifti_convert.py  nipype_interface_applyxfm.py  nipype_interface_bestlinreg.py  nipype_interface_composite.py  nipype_interface_fsl_tgv.py  nipype_interface_makehomogeneous.py  nipype_interface_mnc2nii.py  nipype_interface_nii2mnc.py  nipype_interface_nonzeroaverage.py  nipype_interface_phasemask.py  nipype_interface_phaseweights.py  nipype_interface_romeo.py  nipype_interface_tgv_qsm.py  nipype_visualize.py  participants.tsv  play.py  playAnts.py  qsm_jl.jl  qsm_pipelines.json  qsmxt  qsmxt.py  (+35 more)
.devcontainer/: devcontainer.json
1_preprocessing/: pp_pbs_script.pbs  pp_pbs_script_ses-01.pbs  pp_pbs_script_ses-06.pbs  pp_pbs_script_ses-12.pbs  pp_script.sh  pp_script.sh~  pp_script_ses-06_1133ES.sh  pp_script_ses-12.sh  pp_submission_script.sh  pp_submission_script_ses-01.sh  pp_submission_script_ses-06.sh  pp_submission_script_ses-12.sh  tse_pp_script.sh~
2_tse_mc/: tse_mc_lin_pbs_script.pbs  tse_mc_lin_script.sh  tse_mc_lin_submission_script.sh  tse_mc_nlin_awoong_benchmark.sh  tse_mc_nlin_benchmark_awoonga_pbs_script.pbs  tse_mc_nlin_benchmark_flash_pbs_script.pbs  tse_mc_nlin_flash_benchmark.sh  tse_mc_nlin_pbs_script.pbs  tse_mc_nlin_pbs_script_ses-01.pbs  tse_mc_nlin_pbs_script_ses-06.pbs  tse_mc_nlin_pbs_script_ses-12.pbs  tse_mc_nlin_script.sh  tse_mc_nlin_script_denoisenormalise.sh  tse_mc_nlin_script_ses-01.sh  tse_mc_nlin_script_ses-06.sh  tse_mc_nlin_script_ses-12.sh  tse_mc_nlin_submission_script.sh  tse_mc_nlin_submission_script_ses-01.sh  tse_mc_nlin_submission_script_ses-06.sh  tse_mc_nlin_submission_script_ses-12.sh
3_ashs/: ashs_pbs_script.pbs  ashs_script.sh  ashs_script.sh~  ashs_submission_script.sh
crates/qsmxt-config/: Cargo.toml
crates/qsmxt-config/src/: bridge.rs  command.rs  config.rs  enums.rs  error.rs  lib.rs  masking.rs  methods.rs
crates/qsmxt-config/tests/: param_coverage.rs
docs/: _config.yml  astro.config.mjs  container_readme.md  index.md  package-lock.json  package.json  styles.css
interfaces/: nipype_interface_addtojson.py  nipype_interface_analyse.py  nipype_interface_applyxfm.py  nipype_interface_axialsampling.py  nipype_interface_bestlinreg.py  nipype_interface_bet2.py  nipype_interface_clearswi.py  nipype_interface_combinemagnitude.py  (+25 more)
(+276 files in other folders)
