[workspace]
members = [".", "crates/qsmxt-config"]

[package]
name = "qsmxt"
version = "0.0.0"  # set automatically by release CI from git tag
edition = "2021"
description = "QSMxT: Quantitative Susceptibility Mapping processing tool"
license = "GPL-3.0-only"
repository = "https://github.com/QSMxT/QSMxT"

[[bin]]
name = "qsmxt"
path = "src/main.rs"

[dependencies]
# TEMP: local path while refactoring to the new QSM.rs API. Switch back to a
# published tag (git = ..., tag = "vX.Y.Z", ...) once QSM.rs #43 is merged & released.
qsm-core = { path = "/home/ashley/repos/qsm/QSM.rs", features = ["parallel"] }
qsmxt-config = { path = "crates/qsmxt-config" }
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1"
glob = "0.3"
regex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
indicatif = "0.17"
chrono = "0.4"
dicom = "0.9"
nifti = "0.17"
ratatui = "0.29"
crossterm = "0.28"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
