[package]
name = "qsmxt-config"
version = "0.0.0"  # set automatically by release CI from git tag
edition = "2021"
description = "Pipeline configuration, command generation, and methods text for QSMxT"
license = "GPL-3.0-only"

[dependencies]
# TEMP: local path while refactoring to the new QSM.rs API. Switch back to a
# published tag (git = ..., tag = "vX.Y.Z") once QSM.rs #43 is merged & released.
qsm-core = { path = "/home/ashley/repos/qsm/QSM.rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

[features]
# Enables qsm-core's Serialize derives so the param-coverage test can introspect
# every *Params field. Test-only; not enabled by normal/release builds.
introspection = ["qsm-core/introspection"]
