[package]
name = "qsmxt-config"
version = "0.0.0"  # set automatically by release CI from git tag
edition = "2021"
description = "Pipeline configuration, command generation, and methods text for QSMxT"
license = "GPL-3.0-only"

[dependencies]
qsm-core = { git = "https://github.com/astewartau/QSM.rs.git", tag = "v0.16.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

[features]
# Enables qsm-core's Serialize derives so the param-coverage test can introspect
# every *Params field. Test-only; not enabled by normal/release builds.
introspection = ["qsm-core/introspection"]
